<resources>
    <string name="app_name">Borrow Lab</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elevate">ELEVATE</string>
    <string name="password">Password</string>
    <string name="username">Email</string>
    <string name="loginbutton">LOGIN</string>
    <string name="registeracc">Dont\' have an account yet? Register. </string>
    <string name="show_password">showpassword</string>
    <string name="registeraccount">Register Account</string>
    <string name="username1">Email</string>
    <string name="password1">Password</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="registerb">Register</string>
    <string name="login2">Already registered? Login here</string>
    <string name="welcometo">Welcome to</string>
    <string name="elevate1">ELEVATE!</string>
    <string name="congratulations_you_are_now_registered">🎉 Congratulations, You are now Registered!</string>
    <string name="wt">Welcome to</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="get_started">  GET STARTED  </string>
    <string name="quantity">Quantity</string>
    <string name="add">ADD</string>
    <string name="remove_equipment">REMOVE EQUIPMENT</string>
    <string name="name_of_equipment">Name of equipment</string>
    <string name="remove">REMOVE</string>
    <string name="borrowing_history">BORROWING HISTORY</string>
    <string name="name">Name</string>
    <string name="account_registration">ACCOUNT REGISTRATION</string>
    <string name="year_and_section">Year and Section</string>
    <string name="minus">-</string>
    <string name="borrower">NAME</string>
    <string name="borrowed_items">BORROWED ITEMS</string>
    <string name="status">STATUS</string>
    <string name="borrow">BORROW</string>
    <string name="quantitycart">QUANTITY</string>
    <string name="equipmentcart">EQUIPMENT</string>
    <string name="selectcart">SELECT</string>
    <string name="cart">CART</string>
    <string name="requesting_equipment">REQUESTING EQUIPMENT</string>
    <string name="request_equipment_guidelines">- Browse the available equipment list and select the items you need.\n- Go to your cart and specify the quantity.\n- Submit your request through the app’s BORROW button.\n- Ensure your profile is complete to avoid processing delays.</string>
    <string name="approval_process">APPROVAL PROCESS</string>
    <string name="approval_process_guidelines">- All requests are reviewed by the lab technician.\n- Notifications will be sent upon approval or denial.</string>
    <string name="borrowing_and_pickup">BORROWING AND PICKUP</string>
    <string name="borrowing_and_pickup_guidelines">- After approval, visit the lab during pickup hours.\n- Show your ID and approved request.</string>
    <string name="equipment_usage">EQUIPMENT USAGE</string>
    <string name="equipment_usage_guidelines">- Use the equipment carefully and as instructed.\n- Report issues or malfunctions immediately.\n- Use only for academic/research purposes.</string>
    <string name="returning">RETURNING</string>
    <string name="returning_guidelines">- Clean and check equipment before returning.\n- Confirm return via app or lab logbook.</string>
    <string name="dashboard_labtech">DASHBOARD</string>
    <string name="list_of_equipments_labtechdb">LIST OF EQUIPMENTS</string>
    <string name="manage_equipment_labtechdb">MANAGE EQUIPMENT</string>
    <string name="manage_programs_labtechdb">MANAGE PROGRAMS</string>
    <string name="borrowing_records_labtechdb">BORROWING RECORDS</string>
    <string name="list_of_equipments_labtech">LIST OF EQUIPMENTS</string>
    <string name="add_equipment">ADD EQUIPMENT</string>
    <string name="manage_equipment">MANAGE EQUIPMENT</string>
    <string name="manage_programs">MANAGE PROGRAMS</string>
    <string name="course">COURSE</string>
    <string name="program">PROGRAM</string>
    <string name="notification_labtech">NOTIFICATION</string>
    <string name="notification_student">NOTIFICATION</string>
    <string name="dashboard_student">DASHBOARD</string>
    <string name="list_of_nequipments_students">LIST OF\nEQUIPMENTS</string>
    <string name="guidelines_for_borrowing_student">GUIDELINES FOR BORROWING</string>
    <string name="list_of_equipments_students">LIST OF EQUIPMENTS</string>
    <string name="profile">PROFILE</string>
    <string name="confirm_password_register">Confirm Password</string>
    <string name="password_register">Password</string>
    <string name="go_to_login_page">GO TO LOGIN PAGE</string>
    <string name="register_button">REGISTER</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
    <string name="register_with_google">Register with Google</string>
    <string name="google_register_button_text">Sign Up with Google</string>
    <string name="google_icon">google_icon</string>


</resources>