<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="25dp">


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:contentDescription="Back Button"
        android:scaleType="centerInside"
        android:src="@drawable/backbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="Logo"
        android:src="@drawable/borrowlablogotext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/guidelineScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserrat_black"
                android:text="BORROWING GUIDELINES"
                android:textAlignment="center"
                android:textColor="@color/header"
                android:lineSpacingExtra="-10dp"
                android:textSize="50sp"
                app:layout_constraintHorizontal_bias="0.383"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp"
                android:background="#B3000000">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/requesting_equipment"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_equipment_guidelines"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/montserrat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp"
                android:background="#B3000000">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/approval_process"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/approval_process_guidelines"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/montserrat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp"
                android:background="#B3000000">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/borrowing_and_pickup"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borrowing_and_pickup_guidelines"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/montserrat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp"
                android:background="#B3000000">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/equipment_usage"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equipment_usage_guidelines"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/montserrat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="24dp"
                android:background="#B3000000">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/returning"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/returning_guidelines"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/montserrat" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
