<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:padding="32dp">

    <View
        android:id="@+id/topSpacer"
        android:layout_width="0dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="330dp"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topSpacer"
        app:srcCompat="@drawable/both" />

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputfield"
        android:fontFamily="@font/montserrat_reg"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:textColor="#000000"
        android:textColorHint="#2F0000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputfield"
        android:fontFamily="@font/montserrat_reg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:paddingEnd="50dp"
        android:textColor="#000000"
        android:textColorHint="#2F0000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLoginUsername" />

    <ImageView
        android:id="@+id/ivTogglePassword"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:contentDescription="@string/show_password"
        android:focusable="true"
        android:src="@drawable/show"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@id/etLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etLoginPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#720101"
        android:fontFamily="@font/montserrat_bold"
        android:minHeight="50dp"
        android:text="@string/loginbutton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLoginPassword" />

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/registeracc"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_white"
        android:clipToOutline="true"
        android:elevation="8dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGoToRegister">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/googleSignInContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/ivGoogleIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/google_icon"
                android:src="@drawable/google"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvGoogleSignInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Sign in with Google"
                android:textColor="#000000"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivGoogleIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottomSpacer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogleSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
